# secret-reywen-v3

./: .gitignore  Cargo.toml  SECURITY.md
.fleet/: run.json  settings.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/client/: macros.rs  mod.rs  process.rs
src/client/methods/: bot.rs  channel.rs  group.rs  member.rs  message.rs  mod.rs  permissions.rs  server.rs  user.rs
src/methods/: corelib.rs  driver.rs  mod.rs
src/methods/bots/: bot_create.rs  bot_delete.rs  bot_edit.rs  bot_fetch.rs  bot_fetch_owned.rs  bot_fetch_public.rs  bot_invite.rs  mod.rs
src/methods/channels/: channel_delete.rs  channel_edit.rs  channel_fetch.rs  group_add_member.rs  group_create.rs  group_remove_member.rs  invite_create.rs  members_fetch.rs  message_ack.rs  message_bulk_delete.rs  message_clear_reactions.rs  message_delete.rs  message_edit.rs  message_fetch.rs  message_query.rs  message_react.rs  message_search.rs  message_send.rs  message_unreact.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  voice_join.rs
src/methods/servers/: ban_create.rs  ban_list.rs  ban_remove.rs  channel_create.rs  invites_fetch.rs  member_edit.rs  member_fetch.rs  member_fetch_all.rs  member_remove.rs  mod.rs  permissions_set.rs  permissions_set_default.rs  roles_create.rs  roles_delete.rs  roles_edit.rs  server_ack.rs  server_create.rs  server_delete.rs  server_edit.rs  server_fetch.rs
src/methods/users/: mod.rs  (+15 more)
src/structures/: mod.rs
src/tests/: bots.rs  channels.rs  common.rs  mod.rs  servers.rs  users.rs  websocket.rs
src/websocket/: data.rs  mod.rs  process.rs
(+9 files in other folders)
