[package]
name = "reywen-revolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# data
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.95"
indexmap = "1.9.3"
iso8601-timestamp = "0.2.10"
validator = "0.16.0"
num_enum = "0.6.0"

# misc
proc-macro2 = "1.0.56"
util = "0.1.3"
rand = "0.8.5"

# http
reqwest = { version = "0.11.16", features = ["native-tls", "json"] }

# async
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }


